--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,8 +1,10 @@
 <div class="jumbotron">
-<h1>
-  Burger Party
+  <h1>
+    Burger Party
   </h1>
-  </div>
+
+  <a href="/customers"><button class="btn btn-warning">Customers</button></a>
+</div>
 
 <div class="row">
 
